--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body {
-  font-family: 'Playfair Display SC', georgia;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   display: grid;
   gap: 60px;
   justify-items: center;
-  margin-top: 50px;
-  background: url(./img/background-quem-somos.png) no-repeat;
+  margin-top: 60px;
+  background-color: #f7f7f7;
 }
-
 
 img {
   max-width: 100%;
@@ -16,7 +15,6 @@ img {
 
 a {
   text-decoration: none;
-  font-family: 'IBM Plex Mono', monospace;
 }
 
 ul {
@@ -35,7 +33,12 @@ h3 {
 p {
   font-size: 1.25rem;
   line-height: 1.3;
-  font-family: Helvetica, Arial;
+}
+
+.header {
+  display: grid;
+  gap: 60px;
+  justify-items: center;
 }
 
 .logo span{
@@ -46,28 +49,6 @@ p {
   color:  #D98B99;
   font-size: 2.5rem;
   font-weight: 500;
-}
-
-
-.titulo {
-  font-family: 'Playfair Display SC',  georgia;
-  font-size: 5rem;
-  line-height: 1;
-  font-weight: 500;
-  margin-bottom: 2rem;
-}
-
-.conteudo-sobre h1 {
-  font-size: 3rem;
-  line-height: 1;
-  font-weight: 200;
-  margin-bottom: 2rem;
-}
-
-.header {
-  display: grid;
-  gap: 60px;
-  justify-items: center;
 }
 
 .menu {
@@ -81,15 +62,14 @@ p {
   display: block;
   background: #ffffff;
   padding: 1rem 2rem;
-  border-radius: 1rem;
+  border-radius: 4px;
   color: #000000;
   text-transform: uppercase;
   border: 2px solid #fff;
 }
 
-
 .menu a:hover {
-  border-color: #D98B99;
+  border-color: #e21;
 }
 
 .conteudo {
@@ -100,7 +80,7 @@ p {
 
 .introducao {
   background: #fff;
-  padding: 2.5rem;
+  padding: 40px;
   text-align: right;
   position: relative;
   display: grid;
@@ -109,63 +89,36 @@ p {
   justify-items: end;
 }
 
-.conteudo-primario  {
-  grid-template-columns: 2fr 1fr ;
-}
-
 .introducao h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .introducao::before {
-  content: '';
+  content: "";
   width: 60px;
   height: 4px;
-  background: #D98B99;
+  background: #e21;
   position: absolute;
   top: 30px;
   right: -30px;
 }
 
+.introducao-cover img {
+  object-fit: cover;
+  height: 100%;
+}
+
 .botao {
-  background:#D98B99;
+  background: #e21;
   color: #fff;
   padding: 1rem 2rem;
-  border-radius: 1rem;
+  border-radius: 4px;
   text-transform: uppercase;
 }
 
 .botao:hover {
-  background: #A6535A;
+  background: #900;
 }
-
-.bolos-lista {
-  height: 370px;
-  overflow: scroll;
-  grid-column: 2;
-}
-
-.bolos-lista li{
-cursor: pointer;
-}
-
-.bolos-lista::-webkit-scrollbar {
-  width: 18px;
-}
-
-.bolos-lista::-webkit-scrollbar-thumb {
-  background: #D98B99;
-  border-left: 4px solid white;
-  ;
-  border-right: 4px solid  white;
-  ;
-}
-
-.bolos-lista::-webkit-scrollbar-track {
-  background: white;
-}
-
-
 
 .subtitulo {
   font-size: 4rem;
@@ -174,19 +127,9 @@ cursor: pointer;
   text-align: right;
   padding: 40px;
   align-self: center;
-  background-image: url('./img/onda.svg');
-
-  
+  background-image: url("./img/onda.svg");
+  /* word-break: break-all; */
 }
-
-.subtitulo::before {
-  content: '';
-  width: 10rem;
-  height: 4px;
-  background: #D98B99;
-  position: absolute;
-}
-
 
 .vantagens {
   background: #fff;
@@ -206,7 +149,7 @@ cursor: pointer;
 }
 
 .vantagens-item:hover {
-  border-color: #A6535A;
+  border-color: #e21;
 }
 
 .vantagens-item p {
@@ -221,124 +164,45 @@ cursor: pointer;
   box-sizing: border-box;
 }
 
-
-.conteudo-sobre > p {
-  color: gray;
-  display: flex;
-  padding-bottom: 20px;
+@media (max-width: 1000px) {
+  .conteudo-vantagem {
+    grid-template-columns: 1fr;
+  }
+  .subtitulo {
+    text-align: center;
+  }
 }
 
-
-.conteudo-sobre {
-  margin: auto;
+@media (max-width: 600px) {
+  body {
+    gap: 30px;
+    margin-top: 20px;
+  }
+  .header {
+    gap: 30px;
+  }
+  .conteudo {
+    grid-template-columns: 1fr;
+  }
+  .introducao {
+    text-align: left;
+    justify-items: start;
+  }
+  .introducao::before {
+    display: none;
+  }
+  .subtitulo {
+    font-size: 3rem;
+  }
 }
 
-.conteudo-sobre-img > p {
-  position: relative;
-  color:rgb(255, 255, 255);
-  text-align: center;
-  bottom: 6.4rem;
-}
-
-
-.conteudo-sobre-img { 
-  max-width: 15rem;
-  transform: rotate(30deg);
-  margin: auto;
-}
-
-.formulario iframe{
-  border-radius: 1rem;
-  width: 450px;
-  height: 230px;
-}
-
-
-
-/***@@@@@******************INICIO fale conosco*******@@@@**********/
-#conteudo-form {
-  background: url(./img/background-quem-somos.png);
-  background-position: center;
-  padding: 3rem;
-}
-
-form {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-.form label,
-.form input,
-.form textarea,
-.form button {
-  display: block;
-}
-
-.form label {
-  color: black;
-}
-
-.form input,
-.form textarea {
-  font: inherit;
-  padding: 0.1em;
-  margin-bottom: 0.5em;
-  border: 1px solid rgba(0, 0, 0, 0.192);
-  border-radius: 4px;
-}
-
-.form textarea {
-  min-height: 5rem;
-  resize: vertical;
-}
-
-.form input:hover,
-.form input:focus,
-.form textarea:hover,
-.form textarea:focus {  
-  outline: none;
-  border-color: black;
-  box-shadow: 0 0 0 3px pink;
-}
-
-.form button {
-  display: block;
-  padding: 0.3rem;
-  background: var(--color-dark);
-  color: #020202;
-  font: inherit;
-  text-transform: uppercase;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: 1s;
-}
-
-.form button:hover,
-.form button:focus {
-  outline: none;
-  background: pink;
-}
-
-
-
-
-
-/* footer */
-
-.footer_container {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 8px;
-  font-size: xx-small;
-}
-
-.footer-img {
-  width: 15px;
-  display: flex;
-  direction: row;
+@media (max-width: 400px) {
+  .subtitulo {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1rem;
+  }
 }
 
 
@@ -352,6 +216,35 @@ form {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+.introducao::before {
+  content: '';
+  width: 60px;
+  height: 4px;
+  background: #D98B99;
+  position: absolute;
+  top: 30px;
+  right: -30px;
+}
+
+.subtitulo::before {
+  content: '';
+  width: 10rem;
+  height: 4px;
+  background: #D98B99;
+  position: absolute;
+}
 
 
 
@@ -400,23 +293,6 @@ form {
   }
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Dispositivos small (telefones em modo paisagem, com 576px ou mais)*/
 @media (min-width: 576px) and (max-width: 767.98px) { 
@@ -475,10 +351,4 @@ form {
   }
   
 }
-
-
-
-
-
-
 
