--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   justify-items: center;
   margin-top: 60px;
   background-color: #f7f7f7;
+  background: url(img/background-quem-somos.png) no-repeat;
 }
 
 img {
