--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 img {
   max-width: 100%;
   display: block;
+  
 }
 
 a {
@@ -236,6 +237,11 @@ p {
   }
   .introducao::before {
     display: none;
+  }
+  img {
+    max-width: 100%;
+    display: block;
+    
   }
 }
 
