--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
+:root{
+  -pink: #A6535A;
+  --pink1:#591E29;
+  --pink2:#D98B99;
+  --pink3:#8C0303;
+  --pink4: #D9ADAD;
+  --white: #fff;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   display: grid;
-  gap: 60px;
+  gap: 3.75rem;
   justify-items: center;
-  margin-top: 60px;
-  background-color: #f7f7f7;
+  margin-top: 3.75rem;
+  background-color:var(--white);
   background: url(img/background-quem-somos.png) no-repeat;
 }
 
@@ -34,21 +43,21 @@ h3 {
 
 p {
   font-size: 1.25rem;
-  line-height: 1.3;
+  line-height: 1.5rem;
 }
 
 .header {
   display: grid;
-  gap: 60px;
+  gap: 3.75rem;
   justify-items: center;
 }
 
 .logo span{
-  color: black;
+  color: var(--pink1);
   font-weight: normal;
 }
 .header .logo{
-  color:  #D98B99;
+  color: var(--pink2);
   font-size: 2.5rem;
   font-weight: 500;
 }
@@ -64,7 +73,7 @@ p {
   display: block;
   background: #ffffff;
   padding: 1rem 2rem;
-  border-radius: 4px;
+  border-radius: 1rem;
   color: #000000;
   text-transform: uppercase;
   border: 2px solid #fff;
