--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
   --pink3:#8C0303;
   --pink4: #D9ADAD;
   --white: #fff;
-  --gray-vantagens: #f7f7f7;
+  --white-vantagens: #f7f7f7;
+  --white-slide: #faf6ed;
+  --gray-p-contatos: #7a7676fb;
 }
 
 body {
@@ -159,11 +161,11 @@ p {
 }
 
 .vantagens-item:nth-child(odd) {
-  background: var(--gray-vantagens);
+  background: var(--white-vantagens);
 }
 
 .vantagens-item:hover {
-  border-color: #e21;
+  border-color: var(--pink2);
 }
 
 .vantagens-item p {
@@ -171,44 +173,60 @@ p {
 }
 
 .rodape {
-  background: #fff;
+  background: var(--white);
   width: 100%;
   text-align: center;
-  padding: 40px;
+  padding: 2.5rem;
   box-sizing: border-box;
 }
 
 /*configurando slide */
-.animais-lista {
+.bolos-lista {
   height: 370px;
   overflow-y: scroll;
   grid-column: 2;
 }
 
-.animais-lista li {
+.bolos-lista li {
   cursor: pointer;
 }
 
-.animais-lista::-webkit-scrollbar {
+.bolos-lista::-webkit-scrollbar {
   width: 18px;
 }
 
-.animais-lista::-webkit-scrollbar-thumb {
-  background: #FB5;
-  border-left: 4px solid #faf6ed;
-  border-right: 4px solid #faf6ed;
+.bolos-lista::-webkit-scrollbar-thumb {
+  background: var(--pink2);
+  border-left: 4px solid var(--white-slide);
+  border-right: 4px solid var(--white-slide);
 }
 
-.animais-lista::-webkit-scrollbar-track {
-  background: #faf6ed;
+.bolos-lista::-webkit-scrollbar-track {
+  background: var(--white-slide);
 }
 
-.animais-descricao {
+.bolos-descricao {
   grid-column: 3;
 }
 
-.animais-descricao section {
+.bolos-descricao section {
   margin-bottom: 3rem;
+}
+
+/* section contatos */
+.conteudo-sobre {
+  margin: auto;
+}
+
+.conteudo-sobre p {
+  color: var(--gray-p-contatos);
+}
+
+.rotacionar {
+  transform: rotate(30deg);
+}
+.conteudo-sobre_img_valor {
+
 }
 
 /***@@@@@******************INICIO fale conosco*******@@@@**********/
@@ -343,7 +361,7 @@ form {
   .texto-ds2 {
       top: 80%;
   } 
-  .animais-lista {
+  .bolos-lista {
     grid-column: 1;
     border: 1px solid rgb(255, 0, 149);
   }
