--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 :root{
+  --font-h1: 'Noto Serif', serif;
   --pink: #A6535A;
   --pink1:#591E29;
   --pink2:#D98B99;
@@ -29,6 +31,8 @@ img {
 
 a {
   text-decoration: none;
+  font-family: var(--font-h1);
+  font-weight: 500;
 }
 
 ul {
@@ -45,8 +49,13 @@ h3 {
 }
 
 p {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   line-height: 1.5rem;
+  font-family: 'Times New Roman', Times, serif;
+}
+h1, h2, h3 {
+  font-family: var(--font-h1);
+
 }
 
 .header {
@@ -58,6 +67,7 @@ p {
 .logo span{
   color: var(--pink1);
   font-weight: normal;
+  font-family: var(--font-h1);
 }
 .header .logo{
   color: var(--pink2);
@@ -104,7 +114,8 @@ p {
 }
 
 .introducao h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  font-weight: 00;
 }
 
 .introducao::before {
@@ -236,7 +247,8 @@ p {
   color: var(--white);
 }
 .conteudo-sobre h1{
-  font-size: 3rem;
+  font-size: 2.5rem;
+  font-weight: 500;
 }
 
 /***@@@@@******************INICIO fale conosco*******@@@@**********/
