--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@ h1, h2, h3 {
 /***@@@@@******************INICIO fale conosco*******@@@@**********/
 .fale_conosco {
   background: url(img/background-quem-somos.png) no-repeat;
+  padding: 30px 0px 30px 0px ;
 }
 form {
   display: flex;
@@ -319,6 +320,8 @@ form {
   padding: 15px;
   width: 300px;
   height: 200px;
+  margin: auto;
+  border-radius: 2rem;
 }
 
 
