--- a/estyle/catalogo.css
+++ b/estyle/catalogo.css
@@ -102,6 +102,11 @@ h1, h2, h3 {
   max-width: 62.5rem;
 }
 
+.conteudo img {
+  margin: auto;
+  width : 200px;
+  border-radius: 100%; 
+}
 
 
 
@@ -130,17 +135,65 @@ h1, h2, h3 {
 
 
 
-/*configurando cardapio*/
+
+/*configurando Catálogo*/
 .titulo-conteudo {
   grid-column: 1 / -1;
   text-align: center;
 }
 
-.kit {
+.titulo-conteudo h1{
+  padding-bottom: 2rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 100;
+}
 
-    margin: auto;
-    margin-bottom: 2rem;
-  
+
+.kit-festa {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 62.5rem;
+  margin: auto;
+}
+
+.kit-festa h1{
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 100;
+  text-align: center;
+}
+
+
+
+.kit-festa div{
+  border-top: 8px dashed;
+  padding: 3rem;
+  border-image: url("../img/onda.svg") 150 round;
+  width: 400px;
+}
+
+.kit-festa span {
+  color: green;
+  font-size: 1.4rem;
+}
+
+.kit-festa h3 {
+  font-size: 4rem;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.2);
+  text-align: left;
+  padding: 2.5rem;
+  align-self: center;
+  background-image: url("./img/onda.svg");
+}
+
+.kit-festa h3::before {
+  content: "";
+  width: 8rem;
+  height: 4px;
+  background: var(--pink2);
+  position: absolute;
 }
 
 
