--- a/estyle/style.css
+++ b/estyle/style.css
@@ -251,6 +251,10 @@ h1, h2, h3 {
   font-weight: 500;
 }
 
+
+/*cofnigurando sldie 2*/
+
+
 /***@@@@@******************INICIO fale conosco*******@@@@**********/
 .fale_conosco {
   background: url(../img/background-quem-somos.png) no-repeat;
