--- a/estyle/style.css
+++ b/estyle/style.css
@@ -123,7 +123,7 @@ h1, h2, h3 {
   width: 60px;
   height: 4px;
   background: var(--pink2);
-  position: absolute;
+  position: relative;
   top: 30px;
   right: -30px;
 }
@@ -191,38 +191,25 @@ h1, h2, h3 {
   box-sizing: border-box;
 }
 
-/*configurando slide */
-.bolos-lista {
+
+/*cofnigurando sldie */
+#slide-bolo img{
+  position:absolute;
+  width:100%;
+  height:100%;
+  margin-left:100%;
+
+  -webkit-transition: margin-left 500ms ease-in;
+  -moz-transition: margin-left 500ms ease-in;
+  -o-transition: margin-left 500ms ease-in;
+  transition: margin-left 500ms ease-in;
+}
+#slide-bolo{
+  overflow:hidden;
+  position: relative;
   height: 370px;
-  overflow-y: scroll;
-  grid-column: 2;
 }
 
-.bolos-lista li {
-  cursor: pointer;
-}
-
-.bolos-lista::-webkit-scrollbar {
-  width: 18px;
-}
-
-.bolos-lista::-webkit-scrollbar-thumb {
-  background: var(--pink2);
-  border-left: 4px solid var(--white-slide);
-  border-right: 4px solid var(--white-slide);
-}
-
-.bolos-lista::-webkit-scrollbar-track {
-  background: var(--white-slide);
-}
-
-.bolos-descricao {
-  grid-column: 3;
-}
-
-.bolos-descricao section {
-  margin-bottom: 3rem;
-}
 
 /* section contatos */
 .conteudo-sobre {
@@ -250,10 +237,6 @@ h1, h2, h3 {
   font-size: 2.5rem;
   font-weight: 500;
 }
-
-
-/*cofnigurando sldie 2*/
-
 
 /***@@@@@******************INICIO fale conosco*******@@@@**********/
 .fale_conosco {
