--- a/estyle/style.css
+++ b/estyle/style.css
@@ -100,6 +100,7 @@ h1, h2, h3 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   max-width: 62.5rem;
+  align-content: center;
 }
 
 .introducao {
