--- a/estyle/style.css
+++ b/estyle/style.css
@@ -101,6 +101,7 @@ h1, h2, h3 {
   grid-template-columns: 1fr 1fr;
   max-width: 62.5rem;
   align-content: center;
+  background-color: var(--white);
 }
 
 .introducao {
@@ -112,11 +113,11 @@ h1, h2, h3 {
   gap: 1.25rem;
   align-content: center;
   justify-items: end;
+
 }
 
 .introducao h1 {
   font-size: 2.5rem;
-  font-weight: 00;
 }
 
 .introducao::before {
@@ -199,7 +200,8 @@ h1, h2, h3 {
   width:100%;
   height:100%;
   margin-left:100%;
-
+  text-align: end;
+  align-items: flex-end;
   -webkit-transition: margin-left 500ms ease-in;
   -moz-transition: margin-left 500ms ease-in;
   -o-transition: margin-left 500ms ease-in;
@@ -209,6 +211,9 @@ h1, h2, h3 {
   overflow:hidden;
   position: relative;
   height: 370px;
+  width: 300px;
+  margin: auto;
+  border-radius: 10px;
 }
 
 
