--- a/estyle/catalogo.css
+++ b/estyle/catalogo.css
@@ -95,7 +95,7 @@ h1, h2, h3 {
 
 
 main {
-  background-color: var(--pink5);
+  background-color: var(--white);
 }
 
 .menu a:hover {
@@ -108,44 +108,12 @@ main {
   max-width: 62.5rem;
 }
 
-.conteudo-titulo img,
-.kit img{
+.conteudo-titulo img{
   margin: auto;
   width : 150px;
   height: 250px;
   border-radius: 1rem;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 .titulo {
@@ -154,6 +122,7 @@ main {
   color: rgba(0, 0, 0, 0.2);
   text-align: center;
   align-self: center;
+  background: url(../img/onda.svg);
 }
 
 .recheios {
@@ -166,17 +135,6 @@ main {
   margin: auto;
   margin-top: 10px;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 .bolo {
@@ -192,13 +150,15 @@ main {
   transition: all 0.2s;
 }
 
-.bolo img {
+
+.bolo img,
+.kit img {
   width : 150px;
   height: 250px;
 }
 
 .bolo img:hover,
-.conteudo-kit img:hover {
+.kit img:hover {
   opacity: 0.90;
   transform:scale(1.3);
   transition: all 0.5s;
@@ -212,17 +172,8 @@ main {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 1rem;
-  margin-top: 1rem;
+  margin: 1rem;
 }
-
-
-
-
-
-
-
-
-
 
 .botao {
   background: var(--pink2);
@@ -231,21 +182,13 @@ main {
   padding: 2px 30px;
   border-radius: 10px;
   transition: all 0.2s;
+  margin-top: 10px;
 }
 
 .botao:hover {
   background: var(--white);
   color: var(--pink1);
 }
-
-
-
-
-
-
-
-
-
 
 .conteudo-kit {
   display: grid;
@@ -255,14 +198,26 @@ main {
   background-color: var(pink5);
   border-radius: 1rem;
   text-align: center;
-  padding: 5px;
+}
+
+.conteudo-kit {
+  border: 5px dotted var(--pink4);
+  border-radius: 1rem;
+  height: 500px;
+  margin: 1rem;
 }
 
 .kit {
-  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width : 200px;
+  height: 400px;
+  text-align: center;
+  align-items: center; 
+  border-radius: 1rem;
+  transition: all 0.2s;
 }
-
-
 
 
 
@@ -304,26 +259,17 @@ main {
   .header {
     gap: 30px;
   }
-  
   .conteudo-titulo,
-  .conteudo-kit {
+  .conteudo-kit{
     grid-template-columns: 1fr;
   }
-  .introducao {
-    text-align: left;
-    justify-items: start;
-  }
-  .introducao::before {
-    display: none;
-  }
+  
 
 }
 
 /* Dispositivos médios (tablets com 768px ou mais)*/
 @media (min-width: 768px) and (max-width: 991.98px) { 
-  .conteudo-kit {
-    grid-template-columns: 1fr 1fr;
-  }
+
 } 
 
 /* Dispositivos large (desktops com 992px ou mais)*/
