--- a/estyle/catalogo.css
+++ b/estyle/catalogo.css
@@ -203,8 +203,7 @@ main {
 .conteudo-kit {
   border: 5px dotted var(--pink4);
   border-radius: 1rem;
-  height: 500px;
-  margin: 1rem;
+ padding: 2rem;
 }
 
 .kit {
