--- a/estyle/catalogo.css
+++ b/estyle/catalogo.css
@@ -167,8 +167,8 @@ main {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  gap: ;
-  margin: ;
+  gap: 1rem;
+  margin: 1rem;
 }
 
 .botao {
@@ -224,9 +224,6 @@ main {
   .conteudo-titulo,
   .conteudo-kit{
     grid-template-columns: 1fr;
-  }
-  .conteudo-bolo {
-    grid-template-columns: 1fr  1fr;
   }
   .header {
     gap: 1rem; 
