--- a/estyle/catalogo.css
+++ b/estyle/catalogo.css
@@ -189,7 +189,7 @@ main {
 .conteudo-kit {
   border: 5px dotted var(--pink4);
   border-radius: 1rem;
-  
+  padding: 10px;
 }
 
 /* Dispositivos extra small (telefones em modo retrato, com menos de 576px)*/
