--- a/estyle/catalogo.css
+++ b/estyle/catalogo.css
@@ -145,6 +145,12 @@ main {
   height: 350px;
 }
 
+.bolo p,
+.kit p {
+  width: auto;
+  height: 100px;
+}
+
 
 .bolo img,
 .kit img {
@@ -195,7 +201,8 @@ main {
 .conteudo-kit {
   border: 5px dotted var(--pink4);
   border-radius: 1rem;
-  padding: 10px;
+  padding: 20px;
+  margin: 10px;
 }
 
 /* Dispositivos extra small (telefones em modo retrato, com menos de 576px)*/
